<resources>
    <string name="app_name">FloatButton</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="main_action_title">艾立特智控</string>

    <string name="navi_info">用户信息</string>
    <string name="navi_devices">设备信息</string>
    <string name="navi_state">状态监控</string>
    <string name="navi_data">数据维护</string>
    <string name="navi_theme">主题模式</string>

    <string name="theme_light">日间模式</string>
    <string name="theme_night">夜间模式</string>
    <string name="theme_movie">电影模式</string>

    <string name="action_notify">确定</string>
    <string name="action_change">切换</string>

    <string name="frag_info_user_hint">请输入用户名</string>
    <string name="frag_info_pass_hint">请输入密码</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, nulla bibendum gravida. Imperdiet hac ut ut, eros nonummy fusce a quis. Aliquam ut commodo vel eget, in lorem massa rhoncus, mauris nibh, donec etiam. Luctus tristique, arcu vestibulum curabitur, mauris ut sapien, wisi maecenas amet. Massa mus platea consequat neque sit, adipiscing ac a ipsum ut, adipiscing magna sem urna sit aliquam ipsum.
Odio odio ligula eget mollis sed est. Nulla lacus urna adipiscing, nisl rhoncus nec, leo inceptos faucibus. Vel orci varius, consectetuer senectus erat lorem pharetra, nam ipsum metus doloremque arcu morbi, duis fusce. Montes nam purus in pharetra, at in fermentum facilisi turpis felis, at phasellus cras parturient, lacinia nascetur nisl ultrices non maecenas. Eleifend wisi, etiam donec vestibulum, orci mi est ut vestibulum vel, pellentesque lorem quis porttitor sagittis. Risus sed tincidunt pede. Justo nulla ut vivamus nonummy non lorem, et vitae lacinia tellus donec nec arcu, libero magna libero, sapien vivamus interdum, at nibh. Sit aenean in, a suscipit amet, quis vulputate amet.
Arcu arcu bibendum rutrum eu, fringilla velit netus, mollis sollicitudin in arcu. At pede. Et nec eget, donec lectus dolor lectus quis, libero pede vitae, dui tellus sit, dui cursus viverra blandit aliquam semper. Fusce nec nunc in lobortis tellus congue, in tincidunt sodales primis erat quis laoreet. Et integer, duis tempus, et consectetuer porttitor id phasellus. Massa nibh, consectetuer vestibulum vitae id tempor ad elit. Libero luctus, sit risus auctor at aliquam mauris magna, ut urna in, a hendrerit iaculis posuere mollis urna sit. Nunc nec penatibus purus condimentum, fermentum morbi, suspendisse eget. Et eu rerum rutrum est interdum, sit nec nulla tempor eget.
Mauris sed lorem, ut sollicitudin tempor diam volutpat, justo donec purus, erat erat semper auctor auctor eget sagittis, eu quis scelerisque eu nulla in eget. Sem duis a pulvinar cursus, elit quam libero nulla nonummy, sit tempor hendrerit porta, dictumst litora sed mattis. Felis pariatur placerat. Montes sit quis mattis in fringilla sociis, ipsum vitae, lorem iaculis sed id et, adipiscing accumsan quis sociosqu interdum dictum sodales, et enim ac id. Non sed pellentesque pulvinar litora auctor, massa eu hendrerit ante at, tempor est neque erat hendrerit, aenean neque, tortor lectus.</string>
</resources>
