<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:checked="true"
            android:checkable="true"
            android:id="@+id/navi_info"
            android:title="@string/navi_info" />
        <item
            android:checkable="true"
            android:id="@+id/navi_devices"
            android:title="@string/navi_devices" />
        <item
            android:checkable="true"
            android:id="@+id/navi_state"
            android:title="@string/navi_state" />
        <item
            android:checkable="true"
            android:id="@+id/navi_data"
            android:title="@string/navi_data" />
    </group>
    <item android:title="@string/navi_theme">
        <menu>
                <item
                    android:checkable="true"
                    android:id="@+id/navi_theme_light"
                    android:title="@string/theme_light" />
                <item
                    android:checkable="true"
                    android:id="@+id/navi_theme_night"
                    android:title="@string/theme_night" />
                <item
                    android:checkable="true"
                    android:id="@+id/navi_theme_movie"
                    android:title="@string/theme_movie" />
        </menu>
    </item>
</menu>